<?xml version="1.0"?>
<package>
  <name>dso</name>
  <version>0.0.0</version>
  <description>DSO</description>

  <maintainer email="francois.chataigner@eurecat.org">Francois Chataigner</maintainer>

  <license>Eurecat</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>opencv</build_depend>

</package>
